<resources>
    <string name="app_name">GyroSafe</string>
    <string name="action_settings">Settings</string>
    <string name="Settings">Settings</string>
    <string name="BeginTest">Begin Test</string>
    <string name="Headache">Headache</string>
    <string name="Pressure_In_Head">Pressure in Head</string>
    <string name="Neck_Pain">Neck Pain</string>
    <string name="Nausea_Vomiting">Nausea/Vomiting</string>
    <string name="Dizziness">Dizziness</string>
    <string name="Blurred_Vision">Blurred Vision</string>
    <string name="Balance_Problem">Balance Problems</string>
    <string name="Sensitivity_to_light">Sensitivity to Light</string>
    <string name="Sensitivity_to_Noise">Sensitivity to Noise</string>
    <string name="Feeling_Slowed_Down">Feeling Slowed Down</string>
    <string name="Feeling_in_a_Fog">Feeling \"in a fog\"</string>
    <string name="Difficulty_Concentrating">Difficulty Concentrating</string>
    <string name="Difficulty_Remembering">Difficulty Remembering</string>
    <string name="Fatigue">Fatigue</string>
    <string name="Confusion">Confusion</string>
    <string name="Drowsiness">Drowsiness</string>
    <string name="Feeling_Unusually_Emotional">Feeling unusually emotional</string>
    <string name="Sadness">Sadness</string>
    <string name="Irritability">Irritability</string>
    <string name="Nervousness_or_Anxiety">Nervousness or Anxiety</string>
    <string name="GyroSafe">GyroSafe</string>
    <string name="Symptom_Checklist">Symptom Checklist</string>
    <string name="Next_Section">Next Section</string>
    <string name="Where_art_thou">Where are you right now?</string>
    <string name="Settings_Page">Settings Page</string>
    <string name="Begin_Calibration">Begin Calibration</string>
    <string name="View_Baseline_Results">View Baseline Results</string>
    <string name="Test_Design_Summary">Test Design Summary</string>
    <string name="Email_Results_To">Email Results to:</string>
    <string name="Emergency_Number">Emergency Number:</string>
    <string name="Home">Home</string>
    <string name="Save_Information">Save Information</string>
    <string name="Prepare_Test">Prepare test</string>
</resources>
