<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Settings_Page"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Begin_Calibration"
            android:id="@+id/button3"
            android:layout_marginTop="31dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/View_Baseline_Results"
            android:id="@+id/button4"
            android:layout_below="@+id/button3"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Test_Design_Summary"
            android:id="@+id/button5"
            android:layout_alignTop="@+id/button4"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Email_Results_To"
            android:id="@+id/textView2"
            android:layout_marginStart="24dp"
            android:layout_below="@+id/button4"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Emergency_Number"
            android:id="@+id/textView3"
            android:layout_marginTop="57dp"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/textView2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/textView2" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_below="@+id/textView3"
            android:layout_alignStart="@+id/textView3" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Home"
            android:id="@+id/button6"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/textView"
            android:layout_marginStart="26dp"
            android:layout_marginBottom="41dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Save_Information"
            android:id="@+id/save_info_button"
            android:layout_above="@+id/button6"
            android:layout_toStartOf="@+id/button5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView42"
            android:layout_gravity="right"
            android:layout_above="@+id/editText"
            android:layout_toStartOf="@+id/button6"
            android:layout_alignEnd="@+id/button6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView43"
            android:layout_above="@+id/editText2"
            android:layout_alignTop="@+id/textView3"
            android:layout_alignEnd="@+id/button12" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Prepare_Test"
            android:id="@+id/button12"
            android:layout_below="@+id/button5"
            android:layout_alignStart="@+id/button5" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView41"
        android:layout_gravity="right" />
</LinearLayout>
