<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Symptom_Checklist"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="386dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Headache"
            android:id="@+id/textView5"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="22dp"
            android:layout_marginTop="25dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Pressure_In_Head"
            android:id="@+id/textView6"
            android:layout_below="@+id/textView5"
            android:layout_alignStart="@+id/textView5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Neck_Pain"
            android:id="@+id/textView7"
            android:layout_below="@+id/textView6"
            android:layout_alignStart="@+id/textView6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Nausea_Vomiting"
            android:id="@+id/textView8"
            android:layout_below="@+id/textView7"
            android:layout_alignLeft="@+id/textView6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Dizziness"
            android:id="@+id/textView9"
            android:layout_below="@+id/textView8"
            android:layout_alignStart="@+id/textView8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Blurred_Vision"
            android:id="@+id/textView10"
            android:layout_below="@+id/textView9"
            android:layout_alignLeft="@+id/textView8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Balance_Problem"
            android:id="@+id/textView11"
            android:layout_below="@+id/textView10"
            android:layout_alignStart="@+id/textView12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Sensitivity_to_light"
            android:id="@+id/textView12"
            android:layout_below="@+id/textView11"
            android:layout_alignLeft="@+id/textView8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Sensitivity_to_Noise"
            android:id="@+id/textView13"
            android:layout_below="@+id/textView12"
            android:layout_alignStart="@+id/textView12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Feeling_Slowed_Down"
            android:id="@+id/textView14"
            android:layout_below="@+id/textView13"
            android:layout_alignLeft="@+id/textView12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Feeling_in_a_Fog"
            android:id="@+id/textView15"
            android:layout_below="@+id/textView14"
            android:layout_alignLeft="@+id/textView12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Difficulty_Concentrating"
            android:id="@+id/textView17"
            android:layout_alignLeft="@+id/textView12"
            android:layout_below="@+id/textView15" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Difficulty_Remembering"
            android:id="@+id/textView18"
            android:layout_below="@+id/textView17"
            android:layout_alignLeft="@+id/textView12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Fatigue"
            android:id="@+id/textView19"
            android:layout_below="@+id/textView18"
            android:layout_alignLeft="@+id/textView12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Confusion"
            android:id="@+id/textView20"
            android:layout_below="@+id/textView19"
            android:layout_alignLeft="@+id/textView12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Drowsiness"
            android:id="@+id/textView21"
            android:layout_below="@+id/textView20"
            android:layout_alignStart="@+id/textView20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Feeling_Unusually_Emotional"
            android:id="@+id/textView22"
            android:layout_below="@+id/textView21"
            android:layout_alignLeft="@+id/textView20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Sadness"
            android:id="@+id/textView23"
            android:layout_below="@+id/textView22"
            android:layout_alignLeft="@+id/textView20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Irritability"
            android:id="@+id/textView24"
            android:layout_below="@+id/textView23"
            android:layout_alignLeft="@+id/textView20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/Nervousness_or_Anxiety"
            android:id="@+id/textView25"
            android:layout_below="@+id/textView24"
            android:layout_alignStart="@+id/textView24" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText8"
            android:layout_above="@+id/textView6"
            android:layout_toEndOf="@+id/textView22"
            android:layout_marginStart="24dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText9"
            android:layout_alignBottom="@+id/textView6"
            android:layout_alignStart="@+id/editText8" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText10"
            android:layout_above="@+id/textView8"
            android:layout_alignStart="@+id/editText8" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText11"
            android:layout_alignBottom="@+id/textView8"
            android:layout_alignStart="@+id/editText9" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText12"
            android:layout_above="@+id/textView10"
            android:layout_alignStart="@+id/editText10" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText13"
            android:layout_above="@+id/textView11"
            android:layout_alignStart="@+id/editText11" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText14"
            android:layout_above="@+id/textView12"
            android:layout_alignStart="@+id/editText12" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText15"
            android:layout_above="@+id/textView13"
            android:layout_alignStart="@+id/editText13" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText16"
            android:layout_above="@+id/textView14"
            android:layout_alignStart="@+id/editText14" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText17"
            android:layout_alignBottom="@+id/textView14"
            android:layout_alignStart="@+id/editText15" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText18"
            android:layout_above="@+id/textView17"
            android:layout_alignStart="@+id/editText16" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText19"
            android:layout_alignBottom="@+id/textView17"
            android:layout_alignStart="@+id/editText17" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText20"
            android:layout_alignBottom="@+id/textView18"
            android:layout_alignStart="@+id/editText18" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText21"
            android:layout_above="@+id/textView20"
            android:layout_alignStart="@+id/editText19" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText22"
            android:layout_above="@+id/textView21"
            android:layout_alignStart="@+id/editText20" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText32"
            android:layout_above="@+id/textView22"
            android:layout_alignStart="@+id/editText21" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText33"
            android:layout_alignBottom="@+id/textView22"
            android:layout_alignStart="@+id/editText22" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText34"
            android:layout_above="@+id/textView24"
            android:layout_alignStart="@+id/editText32" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText35"
            android:layout_above="@+id/textView25"
            android:layout_alignStart="@+id/editText33" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText36"
            android:layout_alignBottom="@+id/textView25"
            android:layout_alignStart="@+id/editText34" />

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Next_Section"
        android:id="@+id/button7"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
